Fix navbar background color on mobile

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -102,7 +102,8 @@ body{
 }
 
 .navbar-collapse.in {
-  overflow-y: hidden
+  overflow-y: hidden;
+  background-color: #222;
 }
 
 .modal-content {
